--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,22 @@
-on: [push]
-
+name: Deploy Django app to EC2 instance
+on:
+  push:
+    branches:
+      - main
 jobs:
-  workflow-command-job:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Disable workflow commands
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install dependencies
         run: |
-          echo '::warning:: This is a warning message, to demonstrate that commands are being processed.'
-          stopMarker=$(uuidgen)
-          echo "::stop-commands::$stopMarker"
-          echo '::warning:: This will NOT be rendered as a warning, because stop-commands has been invoked.'
-          echo "::$stopMarker::"
-          echo '::warning:: This is a warning again, because stop-commands has been turned off.'
+          sudo apt-get update
+          sudo apt-get install python3-pip -y
+          pip3 install ansible
+      - name: Deploy Django app to EC2 instance
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          ansible-playbook -i inventory/ec2.py deploy.yml --extra-vars "app_name=your-app-name env=your-env-name" --ssh-common-args "-o StrictHostKeyChecking=no"
