--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,19 @@ jobs:
 #         run: |
 #           ansible-playbook -i inventory/ec2.py deploy.yml --extra-vars "app_name=your-app-name env=your-env-name" --ssh-common-args "-o StrictHostKeyChecking=no"
 
+
+# on: [push]
+
+# jobs:
+#   workflow-command-job:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Disable workflow commands
+#         run: |
+#           echo '::warning:: This is a warning message, to demonstrate that commands are being processed.'
+#           stopMarker=$(uuidgen)
+#           echo "::stop-commands::$stopMarker"
+#           echo '::warning:: This will NOT be rendered as a warning, because stop-commands has been invoked.'
+#           echo "::$stopMarker::"
+#           echo '::warning:: This is a warning again, because stop-commands has been turned off.'
  
