--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install python3-pip -y
-          pip3 install ansible
+#         run: |
+#           sudo apt-get update
+#           sudo apt-get install python3-pip -y
+#           pip3 install ansible
 #       - name: Deploy Django app to EC2 instance
 #         env:
 #           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
